--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,9 @@ body {
   height: 100%;
   font-family: 'Kurb', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  background-color: white;
+  color: black;
 }
 
 
