--- a/styles/Join.module.css
+++ b/styles/Join.module.css
@@ -27,6 +27,11 @@
     outline: none;
 }
 
+
+.user-type .type button * { 
+    background-color: inherit;
+}
+
 .user-type .type:hover {
     background-color: var(--color-concrete);
 }
