--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');
 
 :root {
+    color-scheme: light only;
     --color-concrete: #e6e6e6
+}
+
+* {
+  background-color: white;
+  color: black;
 }
 
 html,
