--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -1,25 +1,29 @@
-.card-container {
+.animal-list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-
-    flex-grow: 1;
 }
 
-@media only screen and (max-width: 720px) {
-    .card-container {
+/* tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .animal-list {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-.animal-card {
-    padding: 5px;
-    margin: 5px;
-    border: 1px solid black;
-
-    text-align: center;
+/* small screens */
+@media (max-width: 767px) {
+    .animal-list {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
-.animal-card__image {
-    min-height: 250px;
-    background-color: lightgray;
+.animal {
+    height: 100%;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.animal__image {
+    position: relative;
+    padding-bottom: 100%;
 }
