--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -19,6 +19,13 @@
     background-color: var(--color-concrete);
 }
 
+.logo-wrapper {
+    flex-basis: 25%;
+    flex-shrink: 1;
+}
+
 .logo {
-    padding-left: 15px;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
