add messages to form submitions, making the /gallery page serverside rendered instead of static.

--- a/styles/Enter.module.css
+++ b/styles/Enter.module.css
@@ -10,13 +10,23 @@
     width: 50%;
 }
 
-.error-message {
+.error-message,
+.success-message {
     width: 50%;
     padding: 20px; 
+    text-align: center;
+}
+
+.error-message {
     color: #eb3223;
     border: 1px solid #eb3223;
     background-color: rgba(255, 0, 0, 0.05);
-    text-align: center;
+}
+
+.success-message {
+    color: green;
+    border: 1px solid green;
+    background-color: rgba(0, 255, 0, 0.3);
 }
 
 .select-field {
