--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -28,3 +28,16 @@
     width: 100%;
     height: 100%;
 }
+
+.footer {
+    padding: 10px;
+    border-top: 1px solid var(--color-concrete);
+    text-align: right;
+    font-size: 11px;
+}
+
+
+.footer a {
+    color: blue;
+}
+
